--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "dependencies": {
     "bn.js": "^4.11.6",
     "elliptic": "^6.4.0",
-    "react-native-randombytes": "^3.5.2",
+    "react-native-randombytes": "github:pedrouid/react-native-randombytes",
     "xhr-request-promise": "^0.1.2"
   }
 }
